--- a/index.htm
+++ b/index.htm
@@ -1,41 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Agent Studio Launch Party</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #FFFFFF;
+            color: #000000;
+        }
+        h1 {
+            color: #032D42;
+        }
+        p {
+            color: #032D42;
+        }
+        .form-control {
+            border-color: #62D84E;
+        }
+        .btn-primary {
+            background-color: #032D42;
+            border-color: #032D42;
+        }
+        .btn-success {
+            background-color: #62D84E;
+            border-color: #62D84E;
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <!-- Marketing Section -->
-        <div class="text-center mb-5">
-            <h1>Welcome to the AI Agent Studio Launch Party!</h1>
-            <p class="lead">Experience the future of AI with our groundbreaking product.</p>
-        </div>
-
-        <!-- Registration Form -->
-        <div class="card p-4 mb-5">
-            <h2 class="text-center">Register for the Event</h2>
-            <form>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Enter your name">
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Submit</button>
-            </form>
-        </div>
-
-        <!-- CTA for Drink Tickets -->
-        <div class="text-center">
-            <button class="btn btn-success">Claim Your Drink Tickets</button>
-        </div>
+    <div class="container text-center mt-5">
+        <h1>Welcome to the AI Agent Studio Launch Party!</h1>
+        <p>Experience the future of AI with our groundbreaking product.</p>
+        <form class="mt-4">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Your Name">
+            </div>
+            <div class="form-group">
+                <input type="email" class="form-control" placeholder="Your Email">
+            </div>
+            <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+        <button class="btn btn-success mt-3">Claim Your Drink Tickets</button>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
